--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "devDependencies": {
         "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6"
+        "typescript": "^2.6.1"
     },
     "dependencies": {
+        "vscode": "^1.1.6",
         "openurl": "^1.1.1"
     }
 }
