Adding Space mono font

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
                         "Iosevka",
                         "Monoid",
                         "Source Code Pro",
+                        "Space Mono",
                         "Ubuntu Mono"
                     ]
                 },
